# catalog/src/models/productModel.js
@@ -1,5 +1,6 @@
 import {DataTypes} from 'sequelize';
 import database from '../config/database.js';
+import Facility from "./facilityModel.js";
 
 const Product = database.sequelize.define('Product', {
   name: {
@@ -21,7 +22,7 @@ const Product = database.sequelize.define('Product', {
     type: DataTypes.BOOLEAN,
     defaultValue: false,
     allowNull: false
-  }
+  },
 }, {
   tableName: 'products',
   timestamps: true
